--- a/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.API/appsettings.json
+++ b/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.API/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hrms": "Server=localhost;Database=hrms;User=root;Password=;TreatTinyAsBoolean=true;"
+    //"Hrms": "Server=localhost;Database=hrms;User=root;Password=;TreatTinyAsBoolean=true;"
+    "Hrms": "Server=localhost;Database=Hrms;User Id=sa;Password=yourStrong(!)Password;"
   }
 }
