--- a/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.Dal.Migrations.MySql/HRMS.Dal.Migrations.MySql.csproj
+++ b/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.Dal.Migrations.MySql/HRMS.Dal.Migrations.MySql.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
