--- a/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.API/appsettings.json
+++ b/src/Module 01/Part 4 - Bootstrapping/HRMS/HRMS.API/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"Hrms": "Server=localhost;Database=hrms;User=root;Password=;TreatTinyAsBoolean=true;"
-    "Hrms": "Server=localhost;Database=Hrms;User Id=sa;Password=yourStrong(!)Password;"
+    "Hrms": "Server=localhost;Database=temporalDemo;User Id=sa;Password=yourStrong(!)Password;"
   }
 }
