--- a/src/Additional Concepts/Temporal/HRMS/HRMS.API/HRMS.API.csproj
+++ b/src/Additional Concepts/Temporal/HRMS/HRMS.API/HRMS.API.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HRMS.Dal.Migrations.MySql\HRMS.Dal.Migrations.MySql.csproj" />
+    <ProjectReference Include="..\HRMS.Dal.Migrations.MsSql\HRMS.Dal.Migrations.MsSql.csproj" />
   </ItemGroup>
 
 </Project>
