connectinstring updted, init migration added

--- a/src/Additional Concepts/Temporal/HRMS/HRMS.API/appsettings.json
+++ b/src/Additional Concepts/Temporal/HRMS/HRMS.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Hrms": "Server=localhost;Database=hrms;User=root;Password=;TreatTinyAsBoolean=true;"
+    "Hrms": "Data Source=(LocalDb)\\MSSQLLocalDB;Integrated Security=True;AttachDBFilename=D:\\src\\Repos\\letsdocoding\\efcore2\\src\\Additional Concepts\\Temporal\\HRMS\\Database\\database.mdf"
   }
 }
