--- a/src/Additional Concepts/Temporal/HRMS/HRMS.Dal/HRMS.Dal.csproj
+++ b/src/Additional Concepts/Temporal/HRMS/HRMS.Dal/HRMS.Dal.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
   <ItemGroup>
